--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
           
             <lable class="form-lable" for="user_name">Имя
               <div class="form-field">
-            <input class="form-input" id="user_name" type="text" name="username" placeholder=" ">
+            <input class="form-input" id="user_name" type="text" name="username" placeholder=" " required>
             <svg class="form-icon" width="12" height="12" >
               <use href="./image/symbol-defs.svg#icon-name"></use>
             </svg>
@@ -470,7 +470,7 @@
           </lable>
         <lable class="form-lable" for="user_email" >Почта
           <div class="form-field">
-           <input class="form-input" id="user_email" type="email" name="user-email">
+           <input class="form-input" id="user_email" type="email" name="user-email" required>
            <svg class="form-icon" width="15" height="12" >
               <use href="./image/symbol-defs.svg#icon-mail"></use>
             </svg>
@@ -478,7 +478,7 @@
           </lable>
           <lable class="form-lable" for="user_tel"  >Телефон
             <div class="form-field">
-           <input class="form-input" id="user_tel" type="tel" name="user-tel">
+           <input class="form-input" id="user_tel" type="tel" name="user-tel" required>
            <svg class="form-icon" width="13" height="13" >
               <use href="./image/symbol-defs.svg#icon-tel"></use>
             </svg>
