--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             </div>
           </lable>
           <label class="form-lable">Комментарий
-            <textarea class="textarear" rows="5" placeholder="Введите текст" ></textarea>
+            <textarea class="textarea" rows="5" placeholder="Введите текст" ></textarea>
           </label>
            <div class="form-field checkbox">
             
