--- a/portfolio.html
+++ b/portfolio.html
@@ -264,8 +264,9 @@
           <div class="address-footer">
             <a class="logo-footer" href="index.html">
               <span class="logo-item1">Web</span
-              ><span class="logo-item3">Studio</span>
-            </a>
+              ><span class="logo-item3">Studio</span></a
+            >
+
             <address class="adress">
               <p class="text-adress">г. Киев, пр-т Леси Украинки, 26</p>
               <a class="link-mail-adress" href="mailto:info@devstudio.com"
@@ -276,8 +277,9 @@
               >
             </address>
           </div>
+
           <div class="links-cont">
-            <h3 class="footer-links">присоединяйтесь</h3>
+            <h3 class="footer-title">присоединяйтесь</h3>
             <ul class="social-links-list-footer">
               <li>
                 <a class="social-link-footer" href="#">
@@ -308,6 +310,24 @@
                 </a>
               </li>
             </ul>
+          </div>
+          <div class="subscribe">
+            <h3 class="footer-title">Подпишитесь на рассылку</h3>
+            <div class="subscribe-form">
+              <label for="mail"></label>
+              <input
+                class="sub-field"
+                placeholder="E-mail"
+                name="mail"
+                id="mail"
+              />
+              <button class="button-subsribe" type="submit">
+                Подписаться
+                <svg class="icon" width="24" height="24">
+                  <use href="./image/symbol-defs.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
           </div>
         </div>
       </div>
